[gd_scene load_steps=5 format=3 uid="uid://iaq03ydn5nn"]

[ext_resource type="Script" path="res://scenes/main_menu/MainMenu.gd" id="1_nscpt"]
[ext_resource type="Texture2D" uid="uid://cfa71danguedm" path="res://scenes/main_menu/assets/background.png" id="2_pakt6"]
[ext_resource type="Texture2D" uid="uid://c2kplb1m8p87l" path="res://scenes/main_menu/assets/heart.png" id="3_0uhsi"]
[ext_resource type="Texture2D" uid="uid://c61m730du7l5l" path="res://scenes/main_menu/assets/menu.png" id="4_tsre8"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_nscpt")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(797, 307)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_pakt6")

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2(796, 260)
emitting = false
amount = 10
lifetime = 2.0
speed_scale = 0.45
randomness = 0.22
texture = ExtResource("3_0uhsi")
emission_shape = 3
emission_rect_extents = Vector2(80, 80)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 92.89
initial_velocity_max = 283.73
angular_velocity_max = 259.68

[node name="PulseTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 109.0
offset_top = 232.0
offset_right = 583.0
offset_bottom = 298.0
size_flags_vertical = 6

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "New game"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
text = "Quit"

[node name="Cute" type="Sprite2D" parent="."]
position = Vector2(775, 326)
scale = Vector2(0.339956, 0.339956)
texture = ExtResource("4_tsre8")

[connection signal="timeout" from="PulseTimer" to="." method="_on_pulse_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
